--- a/reference-issues.adoc
+++ b/reference-issues.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
-permalink: reference-issues-990.html
+permalink: reference-issues.html
 keywords: issues, bugs, known issues
 summary: Known issues identify problems that might prevent you from using this release of the product successfully.
 ---
 
-= Known issues for Cloud Volumes ONTAP 9.9.0
+= Known issues
 :hardbreaks:
 :nofooter:
 :icons: font
