--- a/reference-limitations.adoc
+++ b/reference-limitations.adoc
@@ -15,7 +15,7 @@ summary: Known limitations identify platforms, devices, or functions that are no
 [.lead]
 Known limitations identify platforms, devices, or functions that are not supported by this release of the product, or that do not interoperate correctly with it. Review these limitations carefully.
 
-The following limitations apply to Cloud Volumes ONTAP in all cloud providers: AWS, Azure, and GCP.
+The following limitations apply to Cloud Volumes ONTAP in all cloud providers: AWS, Azure, and Google Cloud.
 
 == Maximum concurrent replication operations
 
