--- a/reference-limits-gcp.adoc
+++ b/reference-limits-gcp.adoc
@@ -2,10 +2,10 @@
 sidebar: sidebar
 permalink: reference-limits-gcp.html
 keywords: limits, maximum, storage, aggregates, disks, volumes, capacity, luns, size, storage virtual machine, SVM
-summary: Cloud Volumes ONTAP has storage configuration limits in GCP to provide reliable operations. For best performance, do not configure your system at the maximum values.
+summary: Cloud Volumes ONTAP has storage configuration limits in Google Cloud to provide reliable operations. For best performance, do not configure your system at the maximum values.
 ---
 
-= Storage limits in GCP
+= Storage limits in Google Cloud
 :hardbreaks:
 :nofooter:
 :icons: font
