--- a/reference-new.adoc
+++ b/reference-new.adoc
@@ -15,7 +15,7 @@ summary: Cloud Volumes ONTAP 9.9.0 includes several new features and enhancement
 [.lead]
 Cloud Volumes ONTAP 9.9.0 includes several new features and enhancements.
 
-Additional features and enhancements are also introduced in the latest versions of Cloud Manager. See the https://docs.netapp.com/us-en/occm/reference_new_occm.html[Cloud Manager Release Notes^] for details.
+Additional features and enhancements are also introduced in the latest versions of Cloud Manager. See the https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/whats-new.html[Cloud Manager Release Notes^] for details.
 
 == Latest update (21 Apr 2021)
 
@@ -31,7 +31,7 @@ A few updates have been made since Cloud Volumes ONTAP 9.9.0 was released.
 
 * Cloud Volumes ONTAP now supports General Purpose SSD (gp3) disks, starting with the 9.7 release. gp3 disks are the lowest-cost SSDs that balance cost and performance for a broad range of workloads.
 +
-https://docs.netapp.com/us-en/occm/task_planning_your_config.html#sizing-your-system-in-aws[Learn more about using gp3 disks with Cloud Volumes ONTAP^].
+https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/task-planning-your-config.html#sizing-your-system-in-aws[Learn more about using gp3 disks with Cloud Volumes ONTAP^].
 
 * Cloud Volumes ONTAP no longer supports Cold HDD (sc1) disks.
 
@@ -79,7 +79,7 @@ Storage VMs that you configure for disaster recovery (DR) don't require an add-o
 
 link:reference-limits-azure.html#storage-vm-limits[Learn more about storage VM limits in Azure].
 
-https://docs.netapp.com/us-en/occm/task_managing_svms_azure.html[Learn how to create data-serving storage VMs for Cloud Volumes ONTAP in Azure^].
+https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/task-managing-svms-azure.html[Learn how to create data-serving storage VMs for Cloud Volumes ONTAP in Azure^].
 
 == Required version of the Cloud Manager Connector
 
@@ -89,7 +89,7 @@ The Cloud Manager Connector must be running version 3.9.4 or later to deploy new
 
 The Cloud Manager 3.9.4 release includes a few enhancements for the management of Cloud Volumes ONTAP, including enhancements to AWS KMS support, shared VPC support in Google Cloud, and reduced IPs in Google Cloud.
 
-Go to the https://docs.netapp.com/us-en/occm/reference_new_occm.html[Cloud Manager Release Notes^] for more details about the 3.9.4 release.
+Go to the https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/whats-new.html[Cloud Manager Release Notes^] for more details about the 3.9.4 release.
 
 == Upgrade notes
 
@@ -97,7 +97,7 @@ Go to the https://docs.netapp.com/us-en/occm/reference_new_occm.html[Cloud Manag
 
 * You can upgrade to Cloud Volumes ONTAP 9.9.0 from the 9.8 release. Cloud Manager will prompt you to upgrade your existing Cloud Volumes ONTAP 9.8 systems to the 9.9.0 release.
 +
-http://docs.netapp.com/us-en/occm/task_updating_ontap_cloud.html#upgrading-cloud-volumes-ontap-from-cloud-manager-notifications[Learn how to upgrade when Cloud Manager notifies you^].
+http://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/task-updating-ontap-cloud.html[Learn how to upgrade when Cloud Manager notifies you^].
 
 * The upgrade of a single node system takes the system offline for up to 25 minutes, during which I/O is interrupted.
 
