--- a/reference-limits-azure.adoc
+++ b/reference-limits-azure.adoc
@@ -66,6 +66,7 @@ NOTE: You can purchase multiple node-based licenses for a Cloud Volumes ONTAP BY
 | E32s_v3 | 29 | 368 TiB | 368 TiB
 | E48s_v3 | 29 | 368 TiB | 368 TiB
 | E64is_v3 | 29 | 368 TiB | 368 TiB
+| E80ids_v4 | 61 | 368 TiB | 368 TiB
 |===
 
 === Single node with node-based licensing
@@ -93,6 +94,7 @@ NOTE: For some VM types, you'll need several BYOL licenses to reach the max syst
 | E48s_v3 | 29 | 368 TiB | 368 TiB | 928 TiB | 368 TiB x each license
 | E64is_v3 | 29 | 368 TiB | 368 TiB | 928 TiB | 368 TiB x each license
 | L8s_v2 | 13 | 368 TiB | 368 TiB | 416 TiB | 368 TiB x each license
+| E80ids_v4 | 61 | 368 TiB | 368 TiB | 1.95 PiB | 368 TiB x each license
 |===
 
 === Single node with capacity-based licensing
@@ -116,6 +118,7 @@ NOTE: For some VM types, you'll need several BYOL licenses to reach the max syst
 | E48s_v3 | 29 | 928 TiB | 2 PiB
 | E64is_v3 | 29 | 928 TiB | 2 PiB
 | L8s_v2 | 13 | 416 TiB | 2 PiB
+| E80ids_v4 | 61 | 1.95 PiB | 2 PiB
 |===
 
 === HA pairs with a Premium license
@@ -132,6 +135,7 @@ NOTE: For some VM types, you'll need several BYOL licenses to reach the max syst
 | DS15_v2 | 61 | 368 TiB | 368 TiB
 | E8s_v3 | 13 | 104 TiB | 368 TiB
 | E48s_v3 | 29 | 232 TiB | 368 TiB
+| E80ids_v4 | 61 | 368 TiB | 368 TiB
 |===
 
 === HA pairs with node-based licensing
@@ -152,6 +156,7 @@ NOTE: For some VM types, you'll need several BYOL licenses to reach the max syst
 | DS15_v2 | 61 | 368 TiB | 368 TiB | 488 TiB | 368 TiB x each license
 | E8s_v3 | 13 | 104 TiB | 368 TiB | 104 TiB | 368 TiB x each license
 | E48s_v3 | 29 | 232 TiB | 368 TiB | 232 TiB | 368 TiB x each license
+| E80ids_v4 | 61 | 368 TiB | 368 TiB | 488 TiB | 368 TiB x each license
 |===
 
 === HA pairs with capacity-based licensing
@@ -170,6 +175,7 @@ NOTE: For some VM types, you'll need several BYOL licenses to reach the max syst
 | DS15_v2 | 61 | 488 TiB | 2 PiB
 | E8s_v3 | 13 | 104 TiB | 2 PiB
 | E48s_v3 | 29 | 232 TiB | 2 PiB
+| E80ids_v4 | 61 | 488 TiB | 2 PiB
 |===
 
 == Aggregate limits
