--- a/reference-configs-azure.adoc
+++ b/reference-configs-azure.adoc
@@ -52,6 +52,7 @@ a|
 * E32s_v3 ^2^
 * E48s_v3 ^2^
 * E64is_v3 ^2^
+* E80ids_v4 ^2^
 * L8s_v2 ^3^
 
 a|
@@ -70,6 +71,7 @@ a|
 * E32s_v3 ^2^
 * E48s_v3 ^2^
 * E64is_v3 ^2^
+* E80ids_v4 ^2^
 
 a|
 * DS3_v2
@@ -83,6 +85,7 @@ a|
 * E32s_v3 ^2^
 * E48s_v3 ^2^
 * E64is_v3 ^2^
+* E80ids_v4 ^2^
 * L8s_v2 ^3^
 
 a|
@@ -97,6 +100,7 @@ a|
 * E32s_v3 ^2^
 * E48s_v3 ^2^
 * E64is_v3 ^2^
+* E80ids_v4 ^2^
 * L8s_v2 ^3^
 
 | Supported disk types ^4^ 6+| Standard HDD Managed Disks, Standard SSD Managed Disks, and Premium SSD Managed Disks
@@ -143,6 +147,8 @@ a|
 * DS15_v2 ^1^
 * E8s_v3
 * E48s_v3 ^1^
+* E80ids_v4 ^1,2^
+
 a|
 * DS4_v2
 * DS13_v2
@@ -153,6 +159,7 @@ a|
 * DS15_v2 ^1^
 * E8s_v3
 * E48s_v3 ^1^
+* E80ids_v4 ^1,2^
 
 a|
 * DS4_v2
@@ -162,6 +169,7 @@ a|
 * DS15_v2 ^1^
 * E8s_v3
 * E48s_v3 ^1^
+* E80ids_v4 ^1,2^
 
 a|
 * DS4_v2
@@ -171,6 +179,7 @@ a|
 * DS15_v2 ^1^
 * E8s_v3
 * E48s_v3 ^1^
+* E80ids_v4 ^1,2^
 
 | Supported disk types 5+| Premium page blobs
 
@@ -179,6 +188,8 @@ a|
 Notes:
 
 . Cloud Volumes ONTAP supports high write speed with these VM types when using an HA pair. High write speed is supported with all instance types when using a single node system. https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/concept-write-speed.html[Learn more about choosing a write speed^].
+
+. This VM is recommended only when Azure maintenance control is needed. It's not recommended for any other use case due to the higher pricing.
 
 . PAYGO Explore isn't supported with HA pairs in Azure.
 
