--- a/reference-limits-azure.adoc
+++ b/reference-limits-azure.adoc
@@ -35,7 +35,7 @@ NetApp doesn't support exceeding the system capacity limit. If you reach the lic
 
 |===
 
-===== For HA, is the license capacity limit per node or for the entire HA pair?
+.For HA, is the license capacity limit per node or for the entire HA pair?
 
 The capacity limit is for the entire HA pair. It is not per node. For example, if you use the Premium license, you can have up to 368 TiB of capacity between both nodes.
 
