Updated node-based license disk limit and note on license stacking

--- a/reference-limits-gcp.adoc
+++ b/reference-limits-gcp.adoc
@@ -32,7 +32,7 @@ For some configurations, disk limits prevent you from reaching the capacity limi
 | PAYGO Explore	| 2 TB (data tiering is not supported with Explore)
 | PAYGO Standard | 10 TB
 | PAYGO Premium | 368 TB
-| Node-based license | 368 TB per license
+| Node-based license | 2 PiB (requires multiple licenses)
 | Capacity-based license | 2 PiB
 
 |===
@@ -67,7 +67,7 @@ The table below shows the maximum system capacity with disks alone, and with dis
 
 == Aggregate limits
 
-Cloud Volumes ONTAP groups Google Cloud Platform disks into _aggregates_. Aggregates provide storage to volumes.
+Cloud Volumes ONTAP groups Google Cloud disks into _aggregates_. Aggregates provide storage to volumes.
 
 [cols=2*,width=55%,options="header,autowidth"]
 |===
@@ -99,7 +99,7 @@ Notes:
 | Limit
 
 | *Storage virtual machines (SVMs)*	| Maximum number for Cloud Volumes ONTAP
-(HA pair or single node) | One data-serving SVM and one destination SVM used for disaster recovery. You can activate the destination SVM for data access if there’s an outage on the source SVM. ^1^
+(HA pair or single node) | One data-serving SVM and one destination SVM used for disaster recovery. You can activate the destination SVM for data access if there's an outage on the source SVM. ^1^
 
 The one data-serving SVM spans the entire Cloud Volumes ONTAP system (HA pair or single node).
 .2+| *Files*	| Maximum size | 16 TB
